integrated journal and habit tracker whats missing is the french language model for text to speech will be added after finishing working on integrating community space